Commented out inspect test until we have conda-build 2

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
 test:
   commands:
     - nnbathy -V
-    - conda inspect linkages -p $PREFIX nn  # [not win]
+    #- conda inspect linkages -p $PREFIX nn  # [not win]
 
 about:
   home: https://github.com/sakov/nn-c
