--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,12 +6,11 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ commit }}.tar.gz
   url: https://github.com/sakov/nn-c/archive/{{ commit }}.tar.gz
   sha256: eb00f951bbe36e933d16de520db44acf93e9becf6e0182e391c1c7f98441972b
 
 build:
-  number: 2
+  number: 3
   skip: True  # [win]
 
 requirements:
@@ -28,6 +27,7 @@ test:
 about:
   home: https://github.com/sakov/nn-c
   license: BSD 2-Clause (bundled triangle code is non-free for commercial use)
+  license_file: LICENSE
   summary: 'Natural Neighbours interpolation.'
 
 extra:
