--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ test:
 about:
   home: https://github.com/sakov/nn-c
   license: BSD 2-Clause (bundled triangle code is non-free for commercial use)
-  license_file: LICENSE
+  license_file: nn/LICENSE
   summary: 'Natural Neighbours interpolation.'
 
 extra:
